[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Hunter/Gun.gd" type="Script" id=1]
[ext_resource path="res://assets/shoot.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/default.png" type="Texture" id=3]

[node name="Gun" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 12.4507, 0.110184 )
scale = Vector2( 0.0426976, 0.0050512 )
texture = ExtResource( 3 )

[node name="ShotAudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
